--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Database Support -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -50,6 +51,11 @@
             <optional>true</optional>
         </dependency>
 
+        <!--        Security-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
