--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    open-in-view: false
   datasource:
     url: jdbc:postgresql://localhost:5432/restaurant_advisor
     username: postgres
