--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,4 +15,10 @@ spring:
   freemarker:
     expose-request-attributes: true
     suffix: .ftl
+
 upload.path: /c:/workspace/project/restaurant_advisor/uploads/
+server.servlet:
+  encoding:
+    charset: UTF-8 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly
+    enabled: true # Enable http encoding support
+    force: true
