--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,12 +2,14 @@
 
 spring:
   jpa:
-    generate-ddl: true
+    generate-ddl: false
     show-sql: true
     properties:
       hibernate:
         format_sql: true
     open-in-view: false
+    hibernate:
+      ddl-auto: validate
   datasource:
     url: jdbc:postgresql://localhost:5432/restaurant_advisor
     username: postgres
@@ -15,8 +17,9 @@ spring:
   freemarker:
     expose-request-attributes: true
     suffix: .ftl
-
-
+    #  https://stackoverflow.com/questions/53172123/flyway-found-non-empty-schemas-public-without-schema-history-table-use-bas
+  flyway:
+    baseline-on-migrate: true
   mail:
     host: smtp.yandex.ru
     username: maicl.svetlov@yandex.ru
