--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!-- Database Support -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -49,6 +54,7 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
