--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+#      javax:
+#        persistance:
+#          validation:
+#            mode: none
     open-in-view: false
     hibernate:
       ddl-auto: validate
@@ -36,3 +40,4 @@ server.servlet:
     charset: UTF-8 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly
     enabled: true # Enable http encoding support
     force: true
+
