Added Noty notifications using webjars

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!--Webjars-->
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>noty</artifactId>
+            <version>3.1.4</version>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
