--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,6 +17,11 @@ spring:
     url: jdbc:postgresql://localhost:5432/restaurant_advisor
     username: postgres
     password: 1234
+    # https://stackoverflow.com/a/49575492
+  data:
+    web:
+      pageable:
+        one-indexed-parameters: true
   freemarker:
     expose-request-attributes: true
     suffix: .ftl
