--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,7 +3,7 @@
 spring:
   jpa:
     generate-ddl: false
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
